# pdf-extractor-local

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
artifacts/: comparativo.json
artifacts/ALIMENTAÇÃO - The impact of nutrition and lifesytle modification on health/docling/: demo.md  summary.json  tables.json  text.md
artifacts/ALIMENTAÇÃO - The impact of nutrition and lifesytle modification on health/grobid/: demo.md  figures.json  summary.json  tables.json  text.md
artifacts/ALIMENTAÇÃO - The impact of nutrition and lifesytle modification on health/marker/: demo.md  summary.json  text.md
artifacts/ALIMENTAÇÃO - The impact of nutrition and lifesytle modification on health/markitdown/: demo.md  summary.json
artifacts/ALIMENTAÇÃO - The impact of nutrition and lifesytle modification on health/nougat/: demo.md  summary.json  text.md
artifacts/ALIMENTAÇÃO - The impact of nutrition and lifesytle modification on health/pdfplumber/: demo.md  summary.json
artifacts/ALIMENTAÇÃO - The impact of nutrition and lifesytle modification on health/pymupdf/: demo.md  figures.json  summary.json
artifacts/demo/: MOVIMENTO - The associations between sedentary behavior and risk of depression-marker.md
artifacts/demo-docling/: SONO - Fisiologia do sono, fisiopatologia e higiene do sono-docling.md
artifacts/demo-grobid/: SONO - Fisiologia do sono, fisiopatologia e higiene do sono-grobid.md
artifacts/demo-marker/: ALIMENTAÇÃO- Journal of Internal Medicine - 2023 - Hu - Diet strategies for promoting healthy aging and longevity  An epidemiological-marker.md  SONO - Fisiologia do sono, fisiopatologia e higiene do sono-marker.md
artifacts/demo-markitdown/: SONO - Fisiologia do sono, fisiopatologia e higiene do sono-markitdown.md
artifacts/demo-nougat/: SONO - Fisiologia do sono, fisiopatologia e higiene do sono-nougat.md
artifacts/demo-pymupdf/: SONO - Fisiologia do sono, fisiopatologia e higiene do sono-pymupdf.md
artifacts/run-2025-11-24/: comparativo.json
docs/: README.md  comparativo.md  demo-guide.md  example-output.md
src/pdf_extractor/: __init__.py  cli.py
src/pdf_extractor_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+166 files in other folders)
