[project]
name = "pdf-extractor-local"
version = "0.1.0"
description = "Benchmark local de extração de conteúdo em PDFs acadêmicos reais"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Gabriel Romão" }
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pandas>=2.2",
  "numpy>=1.26",
  "tqdm>=4.66",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pymupdf>=1.24",
  "pdfplumber>=0.11",
  "docling==2.63.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "markitdown==0.1.3",
  "grobid-client-python==0.1.2",
  "nougat-ocr==0.1.17; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "marker-pdf==1.10.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "pikepdf>=9.5",
  "pytesseract>=0.3.11",
  "opencv-python-headless>=4.10",
  "pillow>=10.1,<11.0",
  "scikit-image>=0.24",
  "albumentations>=1.3,<1.4"
]

[project.optional-dependencies]
full = [
  "torch>=2.3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "torchvision>=0.17; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "torchaudio>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "transformers>=4.45.2,<5.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "sentencepiece>=0.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "accelerate>=0.33; sys_platform != 'darwin' or platform_machine != 'x86_64'"
]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.11"
]

dynamic = ["scripts"]

[project.scripts]
pdf-extractor = "pdf_extractor.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf_extractor*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["pdf_extractor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

